# flyRoom

./: .env.example  .pre-commit-config.yaml  DEVELOPMENT.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
admin/: Dockerfile  pyproject.toml
admin/admin_app/: auth.py  config.py  main.py
admin/admin_app/services/: backup.py  export.py  tenants.py  users.py
admin/admin_app/templates/: backups.html  base.html  settings.html
admin/admin_app/templates/tenants/: detail.html
alembic/versions/: 001_initial_schema.py  005_add_print_jobs.py  006_add_code_type_to_print_jobs.py  007_add_tenant_label_settings.py  008_add_flip_tracking.py  009_add_agent_config_and_pairing.py  010_add_invitations.py  012_add_cross_timeline_fields.py  013_add_cross_outcome_type.py  016_add_collaborators_and_stock_shares.py  018_add_backup_logs_table.py  019_add_lab_manager_role.py
app/: config.py  dependencies.py  main.py
app/auth/: __init__.py  router.py  schemas.py  service.py  utils.py
app/backup/: __init__.py  router.py  schemas.py  serializers.py  service.py
app/billing/: plans.py
app/collaborators/: __init__.py  router.py  schemas.py  service.py
app/crosses/: router.py  schemas.py  service.py
app/db/: __init__.py  database.py  models.py
app/email/: service.py
app/flips/: __init__.py  router.py  schemas.py  service.py
app/imports/: __init__.py  conflict_detectors.py  parsers.py  router.py  schemas.py
app/labels/: __init__.py  generators.py  pdf_generator.py  print_service.py  router.py  schemas.py  service.py
app/llm/: __init__.py  schemas.py  service.py
app/organizations/: router.py  schemas.py  service.py
app/plugins/: __init__.py  base.py  router.py  schemas.py
app/plugins/flybase/: __init__.py  client.py  data_loader.py
app/requests/: router.py  schemas.py  service.py
app/scheduler/: __init__.py  cross_reminders.py  flip_reminders.py
app/stocks/: router.py  schemas.py  service.py
app/tags/: __init__.py  router.py  schemas.py
app/templates/: base.html  index.html  settings.html
app/templates/admin/: index.html
app/templates/auth/: register.html
app/templates/components/: navbar.html  search_results.html  sidebar.html  sidebar_content.html  stock_typeahead.html
app/templates/crosses/: detail.html  list.html  new.html
app/templates/exchange/: browse.html
app/templates/labels/: index.html
app/templates/stocks/: detail.html  import.html  list.html
app/templates/tags/: list.html
app/templates/trays/: detail.html  list.html
app/tenants/: router.py  schemas.py  service.py
app/trays/: router.py  schemas.py  service.py
aur/flyprint-git/: .SRCINFO  .gitignore  PKGBUILD  flyprint.desktop  flyprint.service
docs/: label-printer-integration.md
flyprint/: README.md  __init__.py  __main__.py  agent.py  app_entry.py  cli.py  config.py  printer.py  pyproject.toml
flyprint/gui/: __init__.py  autostart.py  pairing_dialog.py  tray.py
flyprint/printing/: __init__.py  base.py  cups_printer.py  win32_printer.py
tasks/: lessons.md  todo.md
tests/: conftest.py
tests/backup/: test_router.py  test_serializers.py  test_service.py
tests/test_auth/: test_auth.py
tests/test_crosses/: test_cross_outcome.py  test_cross_timeline.py  test_crosses.py
tests/test_flips/: __init__.py  test_flip_service.py
tests/test_imports/: test_imports.py
tests/test_labels/: __init__.py  test_pdf_generator.py  test_print_service.py  test_tray_labels.py
tests/test_llm/: test_llm_service.py
tests/test_organizations/: test_organizations.py
tests/test_plugins/: test_flybase_client.py  test_flybase_data_loader.py  test_plugins_router.py
tests/test_requests/: test_requests.py
tests/test_stocks/: test_stocks.py
tests/test_tags/: test_tags.py
tests/test_tenants/: test_invitations.py
tests/test_trays/: test_trays.py
www/: index.html  nginx.conf
www/css/: style.css
